Pygments changelog
==================

Pull request numbers before 2.4.2 are not linked as they refer to the now defunct Bitbucket project.

Version 2.20.0
--------------
(unreleased)

Version 2.19.1
--------------
(released January 6th, 2025)

- Updated lexers:

  * Ini: Fix quoted string regression introduced in 2.19.0
  * Lua: Fix a regression introduced in 2.19.0

Version 2.19.0
--------------
(released January 5th, 2025)

- New lexers:

  * CodeQL (#2819)
  * Debian Sources (#2788, #2747)
  * Gleam (#2662)
  * GoogleSQL (#2820, #2814)
  * JSON5 (#2734, #1880)
  * Maple (#2763, #2548)
  * NumbaIR (#2433)
  * PDDL (#2799, #2616)
  * Rego (#2794)
  * TableGen (#2751)
  * Vue.js (#2832)

- Updated lexers:

  * BQN: Various improvements (#2789)
  * C#: Fix number highlighting (#986, #2727), add ``file`` keyword (#2726, #2805, #2806), add various other keywords (#2745, #2770)
  * CSS: Add ``revert`` (#2766, #2775)
  * Debian control: Add ``Change-By`` field (#2757)
  * Elip: Improve punctuation handling (#2651)
  * Igor: Add ``int`` (#2801)
  * Ini: Fix quoted strings with embedded comment characters (#2767, #2720)
  * Java: Support functions returning types containing a question mark (#2737)
  * JavaScript: Support private identiiers (#2729, #2671)
  * LLVM: Add ``splat``, improve floating-point number parsing (#2755)
  * Lua: Improve variable detection, add built-in functions (#2829)
  * Macaulay2: Update to 1.24.11 (#2800)
  * PostgreSQL: Add more ``EXPLAIN`` keywords (#2785), handle ``/`` (#2774)
  * S-Lexer: Fix keywords (#2082, #2750)
  * TransactSQL: Fix single-line comments (#2717)
  * Turtle: Fix triple quoted strings (#2744, #2758)
  * Typst: Various improvements (#2724)
  * Various: Add ``^`` as an operator to Matlab, Octave and Scilab (#2798)
  * Vyper: Add ``staticcall`` and ``extcall`` (#2719)

* Mark file extensions for ``HTML/XML+Evoque`` as aliases (#2743)
* Add a color for ``Operator.Word`` to the ``rrt`` style (#2709)