@@ -135,6 +135,7 @@ Other contributors, listed alphabetically, are:
 * Adam Koprowski -- Opa lexer
 * Benjamin Kowarsch -- Modula-2 lexer
 * Domen Kožar -- Nix lexer
+* Alexander Krasnikov -- Kumir lexer
 * Oleh Krekel -- Emacs Lisp lexer
 * Alexander Kriegisch -- Kconfig and AspectJ lexers
 * Marek Kubica -- Scheme lexer
