@@ -7,6 +7,9 @@ Version 2.20.0
 --------------
 (unreleased)
 
+- New lexers:
+  * Kumir
+
 Version 2.19.1
 --------------
 (released January 6th, 2025)
